WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139338
[WinCairo] Compile error, missing guard.
https://bugs.webkit.org/show_bug.cgi?id=139338
Summary
[WinCairo] Compile error, missing guard.
peavo
Reported
2014-12-06 03:59:23 PST
There is missing a ENABLE(CSS_SELECTORS_LEVEL4) guard in CSSParser.cpp.
Attachments
Patch
(1.41 KB, patch)
2014-12-06 04:03 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-12-06 04:03:00 PST
Created
attachment 242708
[details]
Patch
Alex Christensen
Comment 2
2014-12-06 09:45:16 PST
Comment on
attachment 242708
[details]
Patch That happens. Why is wincairo the only port noticing this?
WebKit Commit Bot
Comment 3
2014-12-06 10:25:33 PST
Comment on
attachment 242708
[details]
Patch Clearing flags on attachment: 242708 Committed
r176907
: <
http://trac.webkit.org/changeset/176907
>
WebKit Commit Bot
Comment 4
2014-12-06 10:25:37 PST
All reviewed patches have been landed. Closing bug.
peavo
Comment 5
2014-12-06 12:11:24 PST
(In reply to
comment #2
)
> Comment on
attachment 242708
[details]
> Patch > > That happens. Why is wincairo the only port noticing this?
Thanks for reviewing :) Maybe we should enable CSS_SELECTORS_LEVEL4, to avoid more of these compile errors?
Alex Christensen
Comment 6
2014-12-06 12:18:37 PST
Maybe we should completely remove the flag if everybody else has it enabled. Ben, what do you think?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug