[WinCairo] Compile error, missing guard. https://bugs.webkit.org/show_bug.cgi?id=139338

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-12-06
Reviewed by Alex Christensen.

There is missing a ENABLE(CSS_SELECTORS_LEVEL4) guard in CSSParser.cpp.

* css/CSSParser.cpp:
(WebCore::CSSParser::realLex):

Canonical link: https://commits.webkit.org/157198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176907 268f45cc-cd09-0410-ab3c-d52691b4dbfc